--- a/journal.html
+++ b/journal.html
@@ -32,62 +32,66 @@
 <body class="">
 
 <div id="wrapper">
-  <aside id="mainSide" class="column">
-    <div class="padded">  
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web, mobile &amp; blockchain.</h2>
+   <aside id="mainSide" class="column">
+      <div class="padded">  
+         <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
+         <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web, mobile &amp; blockchain.</h2>
 
-      <div class="contact-footer typeface-colour-secondary">
-        <hr>
-        <div class="columns">
-          <ul class="heading-typeface">
-            <li><strong>CARIBBEAN</strong></li>
-            <li>P.O. BOX RB2289,</li>
-            <li>RODNEY BAY,</li>
-            <li>SAINT LUCIA, WEST INDIES</li>
-          </ul>
-          <ul class="heading-typeface">
-            <li><strong>EUROPE</strong></li>
-            <li>21B MOSKOVKSA STR,</li>
-            <li>SOFIA, 1000</li>
-            <li>BULGARIA</li>
-          </ul>
-          <ul class="heading-typeface">
-            <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
-            <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
-          </ul>
-          <p class="typeface-colour-secondary rs small">
-            <a href="//twitter.com/peakshift">
-              <img src="/assets/icons/twitter.svg" width="16" height="16">
-            </a>
-            <a href="//facebook.com/peakshift">
-              <img src="/assets/icons/facebook.svg" width="16" height="16">
-            </a>
-            <a href="//dribbble.com/jb">
-              <img src="/assets/icons/dribbble.svg" width="16" height="14" style="padding:2px 1 0;">
-            </a>
-          </p>
-        </div>
-        <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small></p>
+         <div class="contact-footer typeface-colour-secondary">
+            <hr>
+            <div class="columns">
+               <ul class="heading-typeface">
+                  <li><strong>CARIBBEAN</strong></li>
+                  <li>P.O. BOX RB2289,</li>
+                  <li>RODNEY BAY,</li>
+                  <li>SAINT LUCIA, WEST INDIES</li>
+               </ul>
+               <ul class="heading-typeface">
+                  <li><strong>EUROPE</strong></li>
+                  <li>21B MOSKOVKSA STR,</li>
+                  <li>SOFIA, 1000</li>
+                  <li>BULGARIA</li>
+               </ul>
+               <ul class="heading-typeface">
+                  <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
+                  <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
+                  <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
+               </ul>
+               <p class="typeface-colour-secondary rs small">
+                  <a href="//twitter.com/peakshift">
+                    <img src="/assets/icons/twitter.svg" width="16" height="16">
+                  </a>
+                  <a href="//facebook.com/peakshift">
+                    <img src="/assets/icons/facebook.svg" width="16" height="16">
+                  </a>
+                  <a href="//dribbble.com/jb">
+                    <img src="/assets/icons/dribbble.svg" width="16" height="14" style="padding:2px 1 0;">
+                  </a>
+               </p>
+            </div>
+            <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small></p>
+         </div>
       </div>
-    </div>
-  </aside>
+   </aside>
   
-  <section id="mainContent" class="column">
-    <div class="contentArea padded clearfix">
-      <h2 class="articleTitle">The state of publishing: Lorem ipsum dolor sit amet, consectetur adipisicing</h2>
-      <article class="projectDetails column">
-        <div class="entry_content">
-         <p>MindSky is an online <a href="#">platform</a> connecting current university students and graduates in Rwanda with employment opportunities .</p>
+   <section id="mainContent" class="column">
+      <div class="contentArea padded clearfix">
+         <h2 class="articleTitle">The state of publishing: Lorem ipsum dolor sit amet, consectetur adipisicing</h2>
+         <article class="projectDetails column">
+            <div class="entry_content">
+               <p>MindSky is an online <a href="#">platform</a> connecting current university students and graduates in Rwanda with employment opportunities .</p>
 
-         <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
-         <blockquote>
-            <p>Having logical precise relevance to the matter at hand. See Synonyms at relevant.</p>
-            <cite>adjective</cite>
-         </blockquote>
+               <figure class="exdent active">
+                  <img src="/assets/i/sketch.png">
+               </figure>
 
-         <h2>Header Level 2</h2>
+               <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
+               <blockquote>
+                  <p>Having logical precise relevance to the matter at hand. See Synonyms at relevant.</p>
+                  <cite>adjective</cite>
+               </blockquote>
+
+               <h2>Header Level 2</h2>
 
 <pre>
    <code data-type="solidity">
@@ -112,54 +116,56 @@
    </code>
 </pre>
 
-          <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+               <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
-          <h3>Header Level 3</h3>
+               <h3>Header Level 3</h3>
 
-          <ol>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-            <li>Aliquam tincidunt mauris eu risus.</li>
-          </ol>
+               <ol>
+                  <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+                  <li>Aliquam tincidunt mauris eu risus.</li>
+               </ol>
 
-          <h4>Header Level 4</h4>
-          <ul>
-            <li>AWS Lambdas</li>
-            <li>AWS EC2</li>
-            <li>Docker</li>
-            <li>Terraform</li>
-            <li>Node.js</li>
-            <li>Vue.js</li>
-            <li>Vuex</li>
-            <li>GraphQL</li>
-            <li>MySQL</li>
-            <li>MongoDB</li>
-          </ul>
-        </div>       
-      </article>
+               <h4>Header Level 4</h4>
+               <ul>
+                  <li>AWS Lambdas</li>
+                  <li>AWS EC2</li>
+                  <li>Docker</li>
+                  <li>Terraform</li>
+                  <li>Node.js</li>
+                  <li>Vue.js</li>
+                  <li>Vuex</li>
+                  <li>GraphQL</li>
+                  <li>MySQL</li>
+                  <li>MongoDB</li>
+               </ul>
+               <hr>
+            </div>       
+         </article>
   
-      <ul class="entry-meta column small">
-        <li><a href="">16 Comments</a></li>
-        <li>
-          <p>
-            <strong>Published</strong><br> 
-            <em>April 16, 2012</em>
-          </p>
-        </li>
-        <li>
-          <p>
-            <span><em>by</em></span><br>
-            <a href="http://twitter.com/peakshift">Johns Beharry</a>
-          </p>
-        </li>
-        <li>
-          <p>
-            <strong>Filed in</strong><br> 
-            <em><a href="#">Books</a></em><br> 
-            <em><a href="#">Publishing</a></em>
-          </p>
-        </li>
-      </ul>
-  </section>
+         <ul class="entry-meta column small">
+            <li><a href="">16 Comments</a></li>
+            <li>
+               <p>
+                  <strong>Published</strong><br> 
+                  <em>April 16, 2012</em>
+               </p>
+            </li>
+            <li>
+               <p>
+                  <span><em>by</em></span><br>
+                  <a href="http://twitter.com/peakshift">Johns Beharry</a>
+               </p>
+             </li>
+            <li>
+               <p>
+                  <strong>Filed in</strong><br> 
+                  <em><a href="#">Books</a></em><br> 
+                  <em><a href="#">Publishing</a></em>
+               </p>
+            </li>
+         </ul>
+      </div>
+   </section>
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
