--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </aside>
   
   <section id="mainContent" class="column">
-    <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="active">
+    <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="media--header active">
       <div class="padded">
         <img class="fill" src="/assets/content/mindsky-top.png?v=03">
       </div>
@@ -86,6 +86,12 @@
         <p>MindSky is an online platform connecting current university students and graduates in Rwanda with employment opportunities.</p>
 
         <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
+
+        <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="media--stretched active">
+          <div class="padded">
+            <img class="fill" src="/assets/content/mindsky-top.png?v=03">
+          </div>
+        </figure>
 
         <h4>Technologies Used</h4>
         <ul>
